# Programmentwurf_cj

./: CMakeCache.txt  CMakeLists.txt  Makefile  Programmentwurf  README.md  cmake_install.cmake  main.c
.devcontainer/: Dockerfile  devcontainer.json
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c
